tests/ui/async-await/in-trait/async-generics-and-bounds.next.stderr
error[E0311]: the parameter type `U` may not live long enough
  --> $DIR/async-generics-and-bounds.rs:14:28
   |
LL |     async fn foo(&self) -> &(T, U) where T: Debug + Sized, U: Hash;
   |                            ^^^^^^^
   |
note: the parameter type `U` must be valid for the anonymous lifetime defined here...
  --> $DIR/async-generics-and-bounds.rs:14:18
   |
LL |     async fn foo(&self) -> &(T, U) where T: Debug + Sized, U: Hash;
   |                  ^^^^^
note: ...so that the reference type `&(T, U)` does not outlive the data it points at
  --> $DIR/async-generics-and-bounds.rs:14:28
   |
LL |     async fn foo(&self) -> &(T, U) where T: Debug + Sized, U: Hash;
   |                            ^^^^^^^

error[E0311]: the parameter type `T` may not live long enough
  --> $DIR/async-generics-and-bounds.rs:14:28
   |
LL |     async fn foo(&self) -> &(T, U) where T: Debug + Sized, U: Hash;
   |                            ^^^^^^^
   |
note: the parameter type `T` must be valid for the anonymous lifetime defined here...
  --> $DIR/async-generics-and-bounds.rs:14:18
   |
LL |     async fn foo(&self) -> &(T, U) where T: Debug + Sized, U: Hash;
   |                  ^^^^^
note: ...so that the reference type `&(T, U)` does not outlive the data it points at
  --> $DIR/async-generics-and-bounds.rs:14:28
   |
LL |     async fn foo(&self) -> &(T, U) where T: Debug + Sized, U: Hash;
   |                            ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0311`.
